[lib]
crate-type = ["lib", "rlib", "cdylib"]

[package]
name = "lce"
license = "MIT"
description = "Rust crate for Minecraft: Legacy Console Edition file formats"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytestream = "0.4"
utf16-ext = "0.1.0"
flate2 = "1.0"
png = "0.17.14"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
fixed = "1.28.0"
bytemuck = "1.19.0"
wasm-bindgen = "0.2.99"